--- a/src/styles/Home/home.scss
+++ b/src/styles/Home/home.scss
@@ -8,6 +8,7 @@
         letter-spacing: 2px;
         text-decoration: underline;
         text-decoration-color: #4BD2DC;
+        margin-bottom: 0;
     }
     .homeContainer-img2 {
         display: none;
@@ -77,6 +78,7 @@
             margin-bottom: 3%;
             text-decoration: underline;
             text-decoration-color: #4BD2DC;
+            margin-bottom: 0;
         }
 
         .contact-container {
