--- a/src/styles/GeneralComponents/card.scss
+++ b/src/styles/GeneralComponents/card.scss
@@ -11,7 +11,7 @@
         img{
             width: 220px;
             height: 124px;
-            object-fit: contain;
+            object-fit: fill;
         }
     }
     .card__title--container {
