--- a/src/styles/product.scss
+++ b/src/styles/product.scss
@@ -48,7 +48,7 @@
         }
 
         .button {
-            background-color: #4BD2DC;
+            background-color: #FE0000;
             color: #ffff;
             font-weight: 600;
             font-size: 15px;
@@ -62,7 +62,7 @@
             &.outline{
                 margin-top: 10px;
                 background-color: #fff;
-                color: #4BD2DC;
+                color: #FE0000;
                 &:hover,
                 &:active{
                     background-color: #f7f7f7;
